// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoogleMaps expect render correctly with the map rendered 1`] = `
<div
  className="ais-GeoSearch"
>
  <div
    className="ais-GeoSearch-map"
  />
</div>
`;

exports[`GoogleMaps expect render correctly without the map rendered 1`] = `
<div
  className="ais-GeoSearch"
>
  <div
    className="ais-GeoSearch-map"
  />
</div>
`;

exports[`GoogleMaps update expect to still render the children when shouldUpdate return false 1`] = `
<div
  className="children"
>
  This is the children
</div>
`;

exports[`GoogleMaps update expect to still render the children when shouldUpdate return false 2`] = `
<div
  className="children"
>
  This is the children updated
</div>
`;
